logs/robotframework-appiumlibrary.log
Listing '.'...
Listing './bin'...
Compiling './bin/rst2html.py'...
Compiling './bin/rst2html4.py'...
Compiling './bin/rst2html5.py'...
Compiling './bin/rst2latex.py'...
Compiling './bin/rst2man.py'...
Compiling './bin/rst2odt.py'...
Compiling './bin/rst2odt_prepstyles.py'...
Compiling './bin/rst2pseudoxml.py'...
Compiling './bin/rst2s5.py'...
Compiling './bin/rst2xetex.py'...
Compiling './bin/rst2xml.py'...
Compiling './bin/rstpep2html.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/AppiumLibrary'...
Listing './lib/python3.5/site-packages/AppiumLibrary/keywords'...
Listing './lib/python3.5/site-packages/AppiumLibrary/locators'...
Listing './lib/python3.5/site-packages/AppiumLibrary/utils'...
Listing './lib/python3.5/site-packages/Appium_Python_Client-0.26.egg-info'...
Listing './lib/python3.5/site-packages/appium'...
Listing './lib/python3.5/site-packages/appium/common'...
Listing './lib/python3.5/site-packages/appium/webdriver'...
Listing './lib/python3.5/site-packages/appium/webdriver/common'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/docutils'...
Listing './lib/python3.5/site-packages/docutils/languages'...
Listing './lib/python3.5/site-packages/docutils/parsers'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/directives'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/include'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/languages'...
Listing './lib/python3.5/site-packages/docutils/readers'...
Listing './lib/python3.5/site-packages/docutils/transforms'...
Listing './lib/python3.5/site-packages/docutils/utils'...
Listing './lib/python3.5/site-packages/docutils/utils/math'...
Listing './lib/python3.5/site-packages/docutils/writers'...
Listing './lib/python3.5/site-packages/docutils/writers/html4css1'...
Listing './lib/python3.5/site-packages/docutils/writers/html5_polyglot'...
Listing './lib/python3.5/site-packages/docutils/writers/latex2e'...
Listing './lib/python3.5/site-packages/docutils/writers/odf_odt'...
Listing './lib/python3.5/site-packages/docutils/writers/pep_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/default'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-white'...
Listing './lib/python3.5/site-packages/docutils/writers/xetex'...
Listing './lib/python3.5/site-packages/docutils-0.14.dist-info'...
Listing './lib/python3.5/site-packages/kitchen'...
Listing './lib/python3.5/site-packages/kitchen/collections'...
Listing './lib/python3.5/site-packages/kitchen/i18n'...
Listing './lib/python3.5/site-packages/kitchen/iterutils'...
Listing './lib/python3.5/site-packages/kitchen/pycompat24'...
Listing './lib/python3.5/site-packages/kitchen/pycompat24/base64'...
Listing './lib/python3.5/site-packages/kitchen/pycompat24/sets'...
Listing './lib/python3.5/site-packages/kitchen/pycompat25'...
Listing './lib/python3.5/site-packages/kitchen/pycompat25/collections'...
Listing './lib/python3.5/site-packages/kitchen/pycompat27'...
Listing './lib/python3.5/site-packages/kitchen/pycompat27/subprocess'...
Listing './lib/python3.5/site-packages/kitchen/text'...
Listing './lib/python3.5/site-packages/kitchen/versioning'...
Listing './lib/python3.5/site-packages/kitchen-1.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/robot'...
Listing './lib/python3.5/site-packages/robot/api'...
Listing './lib/python3.5/site-packages/robot/conf'...
Listing './lib/python3.5/site-packages/robot/htmldata'...
Listing './lib/python3.5/site-packages/robot/htmldata/common'...
Listing './lib/python3.5/site-packages/robot/htmldata/lib'...
Listing './lib/python3.5/site-packages/robot/htmldata/libdoc'...
Listing './lib/python3.5/site-packages/robot/htmldata/rebot'...
Listing './lib/python3.5/site-packages/robot/htmldata/testdoc'...
Listing './lib/python3.5/site-packages/robot/libdocpkg'...
Listing './lib/python3.5/site-packages/robot/libraries'...
Listing './lib/python3.5/site-packages/robot/model'...
Listing './lib/python3.5/site-packages/robot/output'...
Listing './lib/python3.5/site-packages/robot/output/console'...
Listing './lib/python3.5/site-packages/robot/parsing'...
Listing './lib/python3.5/site-packages/robot/reporting'...
Listing './lib/python3.5/site-packages/robot/result'...
Listing './lib/python3.5/site-packages/robot/running'...
Listing './lib/python3.5/site-packages/robot/running/arguments'...
Listing './lib/python3.5/site-packages/robot/running/timeouts'...
Compiling './lib/python3.5/site-packages/robot/running/timeouts/ironpython.py'...
***   File "./lib/python3.5/site-packages/robot/running/timeouts/ironpython.py", line 56
    raise self._error[0], self._error[1], self._error[2]
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robot/running/timeouts/jython.py'...
***   File "./lib/python3.5/site-packages/robot/running/timeouts/jython.py", line 55
    raise self._error[0], self._error[1], self._error[2]
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robot/utils'...
Listing './lib/python3.5/site-packages/robot/variables'...
Listing './lib/python3.5/site-packages/robot/writer'...
Listing './lib/python3.5/site-packages/robotframework-3.0.2.egg-info'...
Listing './lib/python3.5/site-packages/robotframework_appiumlibrary-1.4.6.egg-info'...
Listing './lib/python3.5/site-packages/selenium'...
Listing './lib/python3.5/site-packages/selenium/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver'...
Listing './lib/python3.5/site-packages/selenium/webdriver/android'...
Listing './lib/python3.5/site-packages/selenium/webdriver/blackberry'...
Listing './lib/python3.5/site-packages/selenium/webdriver/chrome'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/actions'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/html5'...
Listing './lib/python3.5/site-packages/selenium/webdriver/edge'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/amd64'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/x86'...
Listing './lib/python3.5/site-packages/selenium/webdriver/ie'...
Listing './lib/python3.5/site-packages/selenium/webdriver/opera'...
Listing './lib/python3.5/site-packages/selenium/webdriver/phantomjs'...
Listing './lib/python3.5/site-packages/selenium/webdriver/remote'...
Listing './lib/python3.5/site-packages/selenium/webdriver/safari'...
Listing './lib/python3.5/site-packages/selenium/webdriver/support'...
Listing './lib/python3.5/site-packages/selenium/webdriver/webkitgtk'...
Listing './lib/python3.5/site-packages/selenium-3.8.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './selenium'...
Listing './selenium/webdriver'...
Listing './selenium/webdriver/firefox'...
Listing './selenium/webdriver/firefox/amd64'...
Listing './selenium/webdriver/firefox/x86'...
Listing './selenium/webdriver/remote'...
Listing './share'...
Listing './share/python-wheels'...
